--- a/View/CSS/bootstrap-theme.css
+++ b/View/CSS/bootstrap-theme.css
@@ -50,7 +50,7 @@
 }
 .btn-default:active,
 .btn-default.active {
-  background-color: #e0e0e0;
+  background-color: #B6DCF1;
   border-color: #dbdbdb;
 }
 .btn-primary {
