--- a/View/Estilo.css
+++ b/View/Estilo.css
@@ -8,6 +8,25 @@ body
 
 }
 
+/*
+.tablaABM {
+	position:fixed;
+	align:center;
+	margin-left:-150px;
+	margin-top:-150px;
+	top:5%;
+	left:15%;
+	width:50%;
+	padding:30px;
+} */
+
+.divABM {
+ position:fixed;
+ width:50%;	
+ left:35%;
+ top:10%;
+}
+
 .navbar {
 	color: green;
 }
@@ -65,6 +84,11 @@ body
 }
 
 .eliminar {
+	color:green;
+	text-decoration:underline;
+}
+
+.editar {
 	color:green;
 	text-decoration:underline;
 }
